<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10sp" >

      	    
	    <RelativeLayout
	        android:id="@+id/headerTimeSpan"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="2sp"
	        android:layout_weight="1"
	        android:background="#888888"
	        android:padding="2sp" >
	
	        <TextView
	            android:id="@+id/tvTimeSpan"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_marginLeft="15sp"
	            android:gravity="center_vertical"
	            android:text="@string/sample_alert_time_span"
	            android:textSize="16sp"
	            android:textColor="#FFFFFF" />
	
	        <ImageView
	            android:id="@+id/ivArrow"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_marginLeft="15sp"
	            android:layout_marginRight="15sp"
	            android:layout_centerVertical="true"
	            android:contentDescription="@string/bool_true"
	            android:src="@android:drawable/arrow_up_float" />
	
	        <TextView
	            android:id="@+id/tvDate"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toLeftOf="@+id/ivArrow"
	            android:gravity="right"
	            android:layout_centerVertical="true"
	            android:text="@string/sample_alert_time_date"
	            android:textSize="12sp"
	            android:textColor="#FFFFFF" />
	    </RelativeLayout>
</TableRow>
