<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:id="@+id/rootElement" >

    <include
        android:id="@+id/include1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        layout="@layout/header_ecare" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/include1"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="62dp"
        android:src="@drawable/icon_wifi_deconnect"
        android:contentDescription="@string/app_name" />
	
	

    <TextView
        android:id="@+id/tvErrorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="72dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/text_error"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/tvErrorDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/imageView1"
        android:text="@string/text_error_text"
        android:textSize="23sp" />

</RelativeLayout>
